# wasm-boids

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: my_benchmark.rs
src/: bluenoise.rs  boid.rs  boid_factory.rs  grid.rs  lib.rs  temp.rs  universe.rs
src/universe/: builder.rs
tests/: universe.rs
