[package]
name = "wasm-boids"
version = "0.0.0"
authors = ["Kai Chevannes <chevannes.kai@gmail.com>"]
repository = "https://github.com/kaichevannes/wasm-boids"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.9"
rayon = "1.10"
wasm-bindgen-rayon = "1.3"

[dev-dependencies]
test-case = "*"
