cargo-features = ["edition2024"]

[package]
name = "wasm-boids"
version = "0.2.2"
authors = ["Kai Chevannes <chevannes.kai@gmail.com>"]
repository = "https://github.com/kaichevannes/wasm-boids"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.9"
rayon = "1.8"
wasm-bindgen-rayon = "1.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
test-case = "*"
